--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <link rel="shortcut icon" href="aguaputo.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colisao</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    </style>
 </head>
 <body>
-    <canvas width="800" height="800" style="border: solid;">
+    <canvas width="1690" height="860" style="border: solid;">
       O sue navegador não suporta o canvas. 
     </canvas>
     <script src="script.js"></script>
